--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,12 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+
+# Virtual environments
+venv/
+env/
+.venv/
+.env/
 
 # Environment files
 .env
@@ -31,13 +21,11 @@ MANIFEST
 # Service Account Keys (CRITICAL)
 *.json
 !.github/**/*.json
-service-account*.json
 intelytix-sa.json
-credentials*.json
+
 
 # IDE
 .vscode/
-.idea/
 *.swp
 *.swo
 *~
@@ -45,20 +33,6 @@ credentials*.json
 # OS
 .DS_Store
 .DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Testing
-.coverage
-.pytest_cache/
-.tox/
-.nox/
-coverage.xml
-*.cover
-.hypothesis/
 
 # Logs
 *.log
@@ -69,3 +43,5 @@ logs/
 
 # Local development
 functions-framework.log
+
+old/
